cmake_minimum_required(VERSION 3.23)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_cpp
        num_004/solution.cc
        num_019/solution.cc
        num_033/solution.cc
        num_034/solution.cc
        num_035/solution.cc
        num_0460/solution.cc
        num_061/solution.cc
        num_069/solution.cc
        num_074/solution.cc
        num_081/solution.cc
        num_092/solution.cc
        num_098/solution.cc
        num_105/solution.cc
        num_106/solution.cc
        num_108/solution.cc
        num_112/solution.cc
        num_113/solution.cc
        num_141/solution.cc
        num_142/solution.cc
        num_143/solution.cc
        num_153/solution.cc
        num_160/solution.cc
        num_236/solution.cc
        num_240/solution.cc
        num_328/solution.cc
        num_373/solution.cc
        num_450/solution.cc
        num_501/solution.cc
        num_513/solution.cc
        num_530/solution.cc
        num_538/solution.cc
        num_617/solution.cc
        num_654/solution.cc
        num_669/solution.cc
        num_700/solution.cc
        num_701/solution.cc num_0003/solution.cc num_0215/solution.cc num_0215/queue.cc num_0015/solution.cc num_0200/solution.cc num_0402/solution.cc num_0056/solution.cc)
